--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,10 @@
 
-<h1>지금 시간은 : <%= @time %></h1>
-
 <% @posts.each do |post| %>
-  <h2><%= post.title %></h2>
-  <p><%= post.content %></p>
+<!--  <h2><%#= post.title %></h2>-->
+  <%= link_to post_path(post) do %>
+    <h2><%= post.title %></h2>
+  <% end %>
+  <p><%= post.content.truncate(30, omission: '...') %></p>
+  <p>by <%= post.author %></p>
+  <hr>
 <% end %>
-
-<h1>지금 시간은 : <%= @time %></h1>
