memo 컨트롤러, 뷰, 라우트 모두 작성 // 현재 redis의 값 목록과 디테일 확인까지 구현됨 // create 이어서 해야 함

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
 
     <%= link_to "글쓰기", new_post_path %>
 
+    <%= link_to "임시 메모 목록", memos_path%>
+
+    <%= link_to "임시 메모 작성", new_memo_path%>
+
     <hr>
 
     <%= yield %>
